modules/cli/src/test/resources/bad/safety/waitfor/threeparty/Test03.scr
module bad.safety.waitfor.threeparty.Test03;


global protocol Proto1(role A, role B, role C)
{
	choice at A
	{
		1() from A to B;
		1() from B to C;
	}
	or
	{
		2() from A to B;
		//1() from B to C;  // Comment is bad
	}
	2() from C to B;
}


